# upd8

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yml
.devcontainer/: devcontainer.json
src/: auth.rs  config.rs  curl.rs  machine.rs  main.rs  ostree.rs  utils.rs
