[package]
name = "upd8"
version = "0.1.0"
edition = "2021"

[dependencies]
ostree = { version = "0.20", features = ["v2018_5"] }
glib = "0.20"
gio = "0.20"
anyhow = "1.0"
chrono = "0.4"
yaml-rust2 = "0.10"
log = "0.4"
env_logger = "0.11"
curl = "0.4"
serde_json = "1.0"
age = { version = "0.11", features = ["cli-common"] }
secrecy = "0.10"
zeroize = "1.8"
nix = { version = "0.30", features = ["reboot"] }
